--- a/memo-ui/package.json
+++ b/memo-ui/package.json
@@ -8,8 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@rebass/preset": "^4.0.5",
     "next": "^12.0.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "rebass": "^4.0.7"
   }
 }
