--- a/memo-ui/package.json
+++ b/memo-ui/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
+    "@rebass/forms": "^4.0.6",
     "@rebass/preset": "^4.0.5",
     "next": "^12.0.7",
     "react": "^17.0.2",
